[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/UI/Battle/Battle_UI_v2_06.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/ChunkyPixels.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/UI/BattleEnvironment/Scripts/BattleCharacter.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/Battle/Battle_UI11.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Battle/Battle_UI12.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Battle/Battle_UI13.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/Battle/Battle_UI14.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/Battle/Battle_UI10.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/Battle/Battle_UI09.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/Battle/Battle_UI05.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/Battle/Battle_UI07.png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/Battle/Battle_UI06.png" type="Texture" id=14]
[ext_resource path="res://Assets/UI/Battle/Battle_UI08.png" type="Texture" id=15]
[ext_resource path="res://Scenes/UI/BattleEnvironment/Scripts/BattleMenuOLD.gd" type="Script" id=16]
[ext_resource path="res://Assets/UI/Battle/Battle_UI_v2_02.png" type="Texture" id=23]
[ext_resource path="res://Assets/UI/Battle/Battle_UI_v2_12.png" type="Texture" id=24]
[ext_resource path="res://Assets/Fonts/ChunkyPixelsNormal.tres" type="DynamicFont" id=25]













[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Wave",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "Display2Wave",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "Display",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.211765, 0.92549, 0.0666667, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0.764706, 1, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )

[node name="Module" type="Control" groups=[
"Persistent",
]]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="UI"]
position = Vector2( 112, -64 )
frames = SubResource( 1 )
animation = "Display2Wave"

[node name="Battle_UI_v2_12" type="Sprite" parent="UI"]
position = Vector2( 119, 100 )
texture = ExtResource( 24 )

[node name="HP" type="RichTextLabel" parent="UI"]
margin_left = -40.0
margin_top = -6.0
margin_right = 27.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "HP"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SP" type="RichTextLabel" parent="UI"]
margin_left = -40.0
margin_top = 8.0
margin_right = -26.0
margin_bottom = 20.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "SP"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="UI"]
margin_left = -19.0
margin_top = -21.0
margin_right = 48.0
margin_bottom = 25.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "Name"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="UI"]
visible = false
margin_top = -68.0
custom_constants/separation = 11
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Control" parent="UI/MainMenu"]

[node name="Attack" type="AnimatedSprite" parent="UI/MainMenu/Attack"]
position = Vector2( 117, -120 )
frames = SubResource( 3 )
animation = "off"

[node name="Skills" type="Control" parent="UI/MainMenu"]
margin_top = 11.0
margin_bottom = 11.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skills" type="AnimatedSprite" parent="UI/MainMenu/Skills"]
position = Vector2( 117, -120 )
frames = SubResource( 4 )
animation = "off"

[node name="Items" type="Control" parent="UI/MainMenu"]
margin_top = 22.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="AnimatedSprite" parent="UI/MainMenu/Items"]
position = Vector2( 117, -120 )
frames = SubResource( 5 )
animation = "off"

[node name="Defend" type="Control" parent="UI/MainMenu"]
margin_top = 33.0
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Defend" type="AnimatedSprite" parent="UI/MainMenu/Defend"]
position = Vector2( 117, -120 )
frames = SubResource( 6 )
animation = "off"

[node name="Run" type="Control" parent="UI/MainMenu"]
margin_top = 44.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run" type="AnimatedSprite" parent="UI/MainMenu/Run"]
position = Vector2( 117, -120 )
frames = SubResource( 7 )
animation = "off"

[node name="HP_Bar" type="ProgressBar" parent="UI"]
margin_left = -23.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 5.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
step = 1.0
value = 100.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_Num" type="RichTextLabel" parent="UI/HP_Bar"]
margin_left = 43.0
margin_top = -12.0
margin_right = 83.0
margin_bottom = 28.0
custom_fonts/normal_font = ExtResource( 25 )
text = "999"

[node name="SP_Bar" type="ProgressBar" parent="UI"]
margin_left = -23.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 19.0
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
value = 100.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SP_Num" type="RichTextLabel" parent="UI/SP_Bar"]
margin_left = 43.0
margin_top = -12.0
margin_right = 83.0
margin_bottom = 28.0
custom_fonts/normal_font = ExtResource( 25 )
text = "999"
